--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "ui-select-tree.js",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
     "grunt-bump": "^0.6.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.10.0",
@@ -21,7 +22,12 @@
   "keywords": [
     "bower",
     "component",
-    "bower","angular","angular-ui","ui-select","bootstrap","directive"
+    "bower",
+    "angular",
+    "angular-ui",
+    "ui-select",
+    "bootstrap",
+    "directive"
   ],
   "author": "Rémi Becheras <rbecheras@sirap.fr>",
   "license": "MIT",
