--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-cssmin": "^1.0.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.10.0",
+    "grunt-ngdocs": "^0.2.9",
     "load-grunt-tasks": "^3.3.0"
   },
   "scripts": {
